--- a/tex/figuressupp.tex
+++ b/tex/figuressupp.tex
@@ -1,24 +1,25 @@
-\begin{figure}[!ht]
-\centering
-\noindent\includegraphics[width=0.7\columnwidth]{fig/region2and3.pdf}
-\caption{{\bf Stability conditions on coefficients of the characteristic polynomial for two and three component systems.} The regions correspond to all possible relationships between the invariants determined by the characteristic polynomial.}
-\label{fig:region2and3}
-\end{figure}
+%!TEX root = ../paper.tex
+% \begin{figure}[!ht]
+% \centering
+% \noindent\includegraphics[width=0.7\columnwidth]{fig/region2and3.pdf}
+% \caption{{\bf Stability conditions on coefficients of the characteristic polynomial for two and three component systems.} The regions correspond to all possible relationships between the invariants determined by the characteristic polynomial.}
+% \label{fig:region2and3}
+% \end{figure}
 
-\pagebreak
+% \pagebreak
 
-\begin{figure}[!ht]
-\centering
-\noindent\includegraphics[width=0.5\columnwidth]{fig/region2x2.pdf}
-\caption{{\bf Stability conditions on coefficients of the characteristic polynomial for two component systems.} The regions correspond to all possible relationships between the invariants determined by the characteristic polynomial. Colors correspond to the regions given in the main text Green: $R_{2000}$, Red: $R_{1100}$, Yellow: $R_{0200}$, Magenta: $R_{0002}$, Blue: $R_{0020}$.}
-\label{fig:region2x2}
-\end{figure}
+% \begin{figure}[!ht]
+% \centering
+% \noindent\includegraphics[width=0.5\columnwidth]{fig/region2x2.pdf}
+% \caption{{\bf Stability conditions on coefficients of the characteristic polynomial for two component systems.} The regions correspond to all possible relationships between the invariants determined by the characteristic polynomial. Colors correspond to the regions given in the main text Green: $R_{2000}$, Red: $R_{1100}$, Yellow: $R_{0200}$, Magenta: $R_{0002}$, Blue: $R_{0020}$.}
+% \label{fig:region2x2}
+% \end{figure}
 
-\pagebreak
+% \pagebreak
 
-\begin{figure}[!ht]
-\centering
-\noindent\includegraphics[width=0.5\columnwidth]{fig/region3x3.pdf}
-\caption{{\bf Stability conditions on coefficients of the characteristic polynomial for three component systems.} Colors correspond to the following regions Green: $R_{3000}$, Red: $R_{1200}$, Yellow: $R_{1002}$, Blue: $R_{1020}$. This is the plane $s_3=1$.}
-\label{fig:region3x3}
-\end{figure}
+% \begin{figure}[!ht]
+% \centering
+% \noindent\includegraphics[width=0.5\columnwidth]{fig/region3x3.pdf}
+% \caption{{\bf Stability conditions on coefficients of the characteristic polynomial for three component systems.} Colors correspond to the following regions Green: $R_{3000}$, Red: $R_{1200}$, Yellow: $R_{1002}$, Blue: $R_{1020}$. This is the plane $s_3=1$.}
+% \label{fig:region3x3}
+% \end{figure}
