--- a/tex/figures.tex
+++ b/tex/figures.tex
@@ -29,7 +29,7 @@
 \begin{figure}[!ht]
 \centering
 \noindent\includegraphics[width=1.0\columnwidth]{fig/combinedfigs.pdf}
-\caption{{\bf Characterization of stability and robustness according to properties of system structure} (A) Stability versus connectivity, (B) robustness versus connectivity, (C) robustness versus number of cycles, (D) robustness versus graph edit distance%, (E) robustness versus number of cycles and connectivity, and (F) robustness versus graph edit distance and connectivity
+\caption{{\bf Characterization of stability and robustness according to properties of system structure} (A) Stability versus connectivity, (B) robustness versus connectivity, (C) robustness versus number of cycles, (D) robustness versus hierarchy%, (E) robustness versus number of cycles and connectivity, and (F) robustness versus graph edit distance and connectivity
  for three component systems.
 }
 \label{fig:combined}
@@ -64,8 +64,17 @@
 \begin{figure}[!ht]
 \centering
 \noindent\includegraphics[width=0.7\columnwidth]{fig/connectdist3D3x3.pdf}
-\caption{{\bf Robustness versus graph edit distance and connectivity for three component systems.} }
+\caption{{\bf Robustness versus hierarchy and connectivity for three component systems.} }
 \label{fig:connectdist3D3x3}
+\end{figure}
+
+\pagebreak
+
+\begin{figure}[!ht]
+\centering
+\noindent\includegraphics[width=0.9\columnwidth]{fig/robustnesssymmetries.pdf}
+\caption{{\bf Example symmetries of robustness.} In this example, the connected component sizes are fixed at $\{2,1,1\}$ with a total of $3$ links between them. Red arrows correspond to transformations like \ref{fig:hiertransformations}A where SCCs are swapped whereas purple arrows correspond to transformations like \ref{fig:hiertransformations}B where links are moved between nodes within a SCC.}
+\label{fig:robustnesssymmetries}
 \end{figure}
 
 % \begin{figure}[!ht]
