add max/min robustness graphs to 3D plot

--- a/tex/tablenographs.tex
+++ b/tex/tablenographs.tex
@@ -158,5 +158,5 @@ $\begin{pmatrix}
 1 & 1 & 1\\
 1 & 1 & 1\\
 \end{pmatrix}$ & 1 & 9 & 3 & 5 & 0.638 & 0.106\\
-\caption{{\bf Probability of stability under resampling and \emph{a priori} stability for three component systems estimated via Monte Carlo sampling.} All matrices not listed have $0$ probability of stability.}\label{tab:structstabmat3}
+\caption{{\bf Robustness and stability for three component systems estimated via Monte Carlo sampling.} All matrices not listed have $0$ probability of stability.}\label{tab:structstabmat3}
 \end{longtable}
