--- a/tex/figures.tex
+++ b/tex/figures.tex
@@ -29,33 +29,17 @@
 \begin{figure}[!ht]
 \centering
 \noindent\includegraphics[width=1.0\columnwidth]{fig/combinedfigs.pdf}
-\caption{{\bf Characterization of stability and robustness according to properties of system structure} (A) Stability versus connectivity, (B) robustness versus connectivity, (C) robustness versus number of cycles, (D) robustness versus hierarchy%, (E) robustness versus number of cycles and connectivity, and (F) robustness versus graph edit distance and connectivity
- for three component systems.
+\caption{{\bf Characterization of stability and robustness according to properties of system structure} (A) Stability versus connectivity, (B) robustness versus connectivity, (C) robustness versus number of cycles, (D) robustness versus hierarchy for three component systems.
 }
 \label{fig:combined}
 \end{figure}
-
-% Figure translations
-% apstab3x3 4 -> A
-% stab3x3 6 -> B
-% cycle3x3 7 -> C
-% New -> D
-% connectcycle3D3x3 5 -> E
-% New -> F
-
-% \begin{figure}[!ht]
-% \centering
-% \noindent\includegraphics[width=0.8\columnwidth]{fig/apstab3x3.pdf}
-% \caption{{\bf Plot of stability versus connectivity for three component systems.} }
-% \label{fig:apstab3x3}
-% \end{figure}
 
 \pagebreak
 
 \begin{figure}[!ht]
 \centering
-\noindent\includegraphics[width=0.7\columnwidth]{fig/connectcycle3D3x3.pdf}
-\caption{{\bf Stability to perturbations versus number of cycles and connectivity for three component systems.} }
+\noindent\includegraphics[width=0.8\columnwidth]{fig/connectcycle3D3x3.pdf}
+\caption{{\bf Robustness versus number of cycles and connectivity for three component systems.} Each point represents the average robustness of all graphs having a given number of cycles and connectivity.}
 \label{fig:connectcycle3D3x3}
 \end{figure}
 
@@ -63,8 +47,8 @@
 
 \begin{figure}[!ht]
 \centering
-\noindent\includegraphics[width=0.7\columnwidth]{fig/connectdist3D3x3.pdf}
-\caption{{\bf Robustness versus hierarchy and connectivity for three component systems.} }
+\noindent\includegraphics[width=0.8\columnwidth]{fig/connectdist3D3x3.pdf}
+\caption{{\bf Robustness versus hierarchy and connectivity for three component systems.} Each point represents the average robustness of all graphs having a given hierarchy and connectivity.}
 \label{fig:connectdist3D3x3}
 \end{figure}
 
@@ -73,20 +57,6 @@
 \begin{figure}[!ht]
 \centering
 \noindent\includegraphics[width=0.9\columnwidth]{fig/robustnesssymmetries.pdf}
-\caption{{\bf Example symmetries of robustness.} In this example, the connected component sizes are fixed at $\{2,1,1\}$ with a total of $3$ links between them. Red arrows correspond to transformations like \ref{fig:hiertransformations}A where SCCs are swapped whereas purple arrows correspond to transformations like \ref{fig:hiertransformations}B where links are moved between nodes within a SCC.}
+\caption{{\bf Example symmetries of robustness.} In this example, the connected component sizes are fixed at $\{2,1,1\}$ with a total of $3$ links between them. Red arrows correspond to transformations like \ref{fig:hiertransformations}A where SCCs are swapped whereas purple arrows correspond to transformations like \ref{fig:hiertransformations}B where links are moved between nodes within a SCC. (A) shows all underlying graphs while (B) shows the number of nodes in each SCC and the number of links between the SCCs.}
 \label{fig:robustnesssymmetries}
 \end{figure}
-
-% \begin{figure}[!ht]
-% \centering
-% \noindent\includegraphics[width=0.8\columnwidth]{fig/stab3x3.pdf}
-% \caption{{\bf Plot of stability to perturbations versus connectivity for three component systems.} }
-% \label{fig:stab3x3}
-% \end{figure}
-
-% \begin{figure}[!ht]
-% \centering
-% \noindent\includegraphics[width=0.8\columnwidth]{fig/cycle3x3.pdf}
-% \caption{{\bf Plot of stability to perturbations versus number of cycles for three component systems.} }
-% \label{fig:cycle3x3}
-% \end{figure}
