--- a/tex/abstract-cited.tex
+++ b/tex/abstract-cited.tex
@@ -1,2 +1,2 @@
-%!TEX root = ../paper.tex
-The analysis of dynamical systems that attempts to model chemical reaction, gene-regulatory, population, and ecosystem networks all rely on models having interacting components \cite{RossCr2003,Alon2006,Palsson2006,HamidBolouri2008,Palsson2011a,Voit2012,Sauro2012}. When the details of these interactions are unknown for systems of interest, one effective approach is to study the dynamical properties of an ensemble of models determined by constraints that can be considered to apply to all such systems \cite{Gardner1970,May1972,Cohen1984,May1972a,Radius2014}. Here we analyze the stability and robustness of a large class of dynamical systems \cite{WADDINGTON1942a,VanNimwegen1999,Siegal2002,Ciliberti2007b,Ciliberti2007,Wagner2013}. In particular, we precisely determine the probability distribution of robustness over system connectivity, which has significant implications from the study of metabolic to gene-regulatory to ecosystem network dynamics, for systems with two and three interacting components. We show that robustness is classified by the number of links between strongly connected components of the graph representing the underlying system connectivity leading to the conclusion that the most robust systems are also the most hierarchical. We also demonstrate that permutation of strongly connected components is a fundamental symmetry of system robustness. This results in the classification of the dynamical robustness of biological networks based upon a purely topological property.
+%!TEX root = ../paper-abstract.tex
+The analysis of dynamical systems that attempts to model chemical reaction, gene-regulatory, population, and ecosystem networks all rely on models having interacting components \cite{RossCr2003,Alon2006,Palsson2006,HamidBolouri2008,Palsson2011a,Voit2012,Sauro2012}. When the details of these interactions are unknown for systems of interest, one effective approach is to study the dynamical properties of an ensemble of models determined by constraints that can be considered to apply to all such systems \cite{Gardner1970,May1972,Cohen1984,May1972a,Radius2014}. Here we analyze the stability and robustness of a large class of dynamical systems \cite{WADDINGTON1942a,VanNimwegen1999,Siegal2002,Ciliberti2007b,Ciliberti2007,Wagner2013}. In particular, we determine the probability distribution of robustness over system connectivity, which has significant implications from the study of metabolic to gene-regulatory to ecosystem network dynamics. We do so precisely for systems with two and three interacting components. We show that robustness is classified by the number of links between strongly connected components of the graph representing the underlying system connectivity leading to the conclusion that the most robust systems are also the most hierarchical. We also demonstrate that permutation of strongly connected components is a fundamental symmetry of system robustness. This results in the classification of the dynamical robustness of biological networks based upon a purely topological property.
