--- a/paper.tex
+++ b/paper.tex
@@ -210,7 +210,7 @@ i.e. $\mathbf{1}_{stab'}$ corresponds to replacing $x_{k_1}, \ldots x_{k_m}$ wit
 
 While one can resample a fixed subset of the links, more typically we will be randomly selecting which links to resample with a uniform distribution on the links.  The result of this operation corresponds to averaging our quantity over subsets of links:
 \begin{equation}\label{eq:robavgoverlinks}
-\langle R (\hbox{stab}, \mu'_{k_1, \ldots, k_m}) \rangle_m =
+\langle R (\hbox{stab}, \mu') \rangle_m =
 \frac{1}{\binom{\connectivity}{m}}
 \sum_{\{k_1, k_2, \ldots k_m\} \subset \{1, 2,, \ldots \connectivity\}}
 R (\hbox{stab}, \mu'_{k_1, \ldots, k_m})
@@ -240,12 +240,12 @@ The relationship between $G$ and $\hier(G)$ for all $G$ with a given number of v
 For systems having two components, we can analytically compute the probability of stability and robustness from \ref{eq:condprobgen}. For those having three components, we can estimate these same quantities using Monte Carlo simulations. Systems of larger size can be analyzed using the symmetry properties of robustness extracted from this analysis. For two-component systems having $2 \times 2$ Jacobian matrices, the aforementioned stability criteria result in the conditions $T < 0$ and $D >
 0$ where $T$ and $D$ denote the trace and the determinant. Suppose we have a stable matrix
 $$
-\begin{pmatrix}
+\begin{bmatrix}
 a & b \\
 d & c
-\end{pmatrix}
+\end{bmatrix}
 $$
-where $a + c < 0$ and $ac > bd$.  For the case in which $x_1=a,\,x_2=b,\,x_3=c,\,x_4=d$ we need to compute what corresponds to $R(\mathrm{stab},k)$ where $k=1 \ldots 4$. By symmetry, there are two cases to consider; resampling $a$ is equivalent to resampling $c$ and resampling $b$ is equivalent to resampling $d$ so we only need to explicitly compute $R(\mathrm{stab},1)$ and $R(\mathrm{stab},2)$. Suppose that we resample $b$ to compute $R(\mathrm{stab},2)$.
+where $a + c < 0$ and $ac > bd$.  For the case in which $x_1=a,\,x_2=b,\,x_3=c,\,x_4=d$ we need to compute what corresponds to $R(\mathrm{stab},\mu'_k)$ where $k=1 \ldots 4$. By symmetry, there are two cases to consider; resampling $a$ is equivalent to resampling $c$ and resampling $b$ is equivalent to resampling $d$ so we only need to explicitly compute $ R(\mathrm{stab},\mu'_1)$ and $R(\mathrm{stab},\mu'_2)$. Suppose that we resample $b$ to compute $R(\mathrm{stab},\mu'_2)$.
 % \begin{strip}
 % \begin{align}\label{eq:condprob}
 % P\left(\begin{pmatrix}
@@ -268,30 +268,30 @@ where $a + c < 0$ and $ac > bd$.  For the case in which $x_1=a,\,x_2=b,\,x_3=c,\
 % \end{align}
 The denominator of \ref{eq:condprobgen} in this case is given by
 \begin{align*}
-P\left(\begin{pmatrix}
+P\left(\textrm{stab } \left( \begin{bmatrix}
 a & b \\
 d & c
-\end{pmatrix} \textrm{stable } \right) = \frac{\int_{\genfrac{}{}{0pt}{}{\genfrac{}{}{0pt}{}{ac>bd}{a+c<0}}{H^4}} da\,db\,dc\,dd\,1}{\int_{H^4} da\,db\,dc\,dd\,1}.
+\end{bmatrix} \right) \right) = \frac{\int_{\genfrac{}{}{0pt}{}{\genfrac{}{}{0pt}{}{ac>bd}{a+c<0}}{H^4}} da\,db\,dc\,dd\,1}{\int_{H^4} da\,db\,dc\,dd\,1}.
 \end{align*}
 Since the trace does not involve $b$, the $T<0$ condition will be satisfied automatically and we only need to examine the determinant. Thus, we have the inequalities $ac > b'd$ and $-1 < b' < 1$ in addition to the previous constraints leading to an expression for the numerator of \ref{eq:condprobgen}
 \begin{align*}
-P\left(\begin{pmatrix}
+P\left(\textrm{stab} \left( \begin{bmatrix}
 a & b \\
 d & c
-\end{pmatrix} \textrm{stable and } \begin{pmatrix}
+\end{bmatrix} \right) \textrm{ and stab} \left( \begin{bmatrix}
 a & b' \\
 d & c
-\end{pmatrix} \textrm{stable } \right) = \frac{\int_{{{ac>b'd \atop ac>bd} \atop a+c<0} \atop H^5} da\,db\,dc\,dd\,db'\,1}{\int_{H^5} da\,db\,dc\,dd\,db'\,1}.
+\end{bmatrix} \right) \right) = \frac{\int_{{{ac>b'd \atop ac>bd} \atop a+c<0} \atop H^5} da\,db\,dc\,dd\,db'\,1}{\int_{H^5} da\,db\,dc\,dd\,db'\,1}.
 \end{align*}
 The analogous equation for resampling $a$ is
 \begin{align*}
-P\left(\begin{pmatrix}
+P\left(\textrm{stab} \left( \begin{bmatrix}
 a & b \\
 d & c
-\end{pmatrix} \textrm{stable and } \begin{pmatrix}
+\end{bmatrix} \right) \textrm{ and stab} \left( \begin{bmatrix}
 a' & b \\
 d & c
-\end{pmatrix} \textrm{stable } \right) = \frac{\int_{{{{a'c>bd \atop a' + c < 0} \atop ac>bd} \atop a+c<0} \atop H^5} da\,db\,dc\,dd\,da'\,1}{\int_{H^5} da\,db\,dc\,dd\,da'\,1}.
+\end{bmatrix} \right) \right) = \frac{\int_{{{{a'c>bd \atop a' + c < 0} \atop ac>bd} \atop a+c<0} \atop H^5} da\,db\,dc\,dd\,da'\,1}{\int_{H^5} da\,db\,dc\,dd\,da'\,1}.
 \end{align*}
 
 Using this approach the probability of stability and of robustness for all two component systems is given in \ref{tab:structstabmat}.
@@ -341,21 +341,21 @@ $i$ and $j$, then there are a total of
 $\sum_{i,j \in \hier(G)} \ell_{ij} + \sum_{i=1}^n \connectivity_i$
 links in $G$.  If we resample a randomly chosen link in a component
 $C_i$, then the probability that the system will remain stable after
-resampling is $R(\hbox{avg stab} (C_i), 1)$.  If we resample a link
+resampling is $\langle R(\hbox{stab} (C_i), \mu') \rangle_1$.  If we resample a link
 between components $C_i$ and $C_j$, the system will remain stable with
 probability 1.  Hence, the probability that the system will remain
 stable upon resampling a random link is the weighted average of these
 probabilities:
 \begin{align}\label{eq:sccrobustness}
-R(\hbox{avg stab} (G), 1) =
+\langle R(\hbox{stab} (G), \mu') \rangle_1 =
 \frac{\sum\limits_{(i,j) \in \hier(G)} \ell_{ij} +
-      \sum\limits_{i=1}^n \connectivity_i R(C_i)}
+      \sum\limits_{i=1}^n \connectivity_i \langle R(\textrm{stab}(C_i),\mu') \rangle_1}
      {\sum\limits_{(i,j) \in \hier(G)} \ell_{ij} +
       \sum\limits_{i=1}^n \connectivity_i}.
 \end{align}
 For instance, if our graph is the one in \ref{fig:scc}B or C, then we have two connected components, one with two nodes, and one with one node.  From \ref{tab:structstabmat}, we know that the graph with two nodes has probability $0.25$ of being stable and and robustness $0.62$.  The graph with one node corresponds to a $1 \times 1$ matrix, so we have probability $0.5$ of stability and robustness $0.5$.  Thus, the probability of our 3-node graph being stable is $0.5 \times 0.25 = 0.125$ and its robustness is
 \[
-R(G) = \frac{2 + 0.5 + 4 \times 0.62}{2 + 1 + 4} = 0.714,
+\langle R(\textrm{stab}(G),\mu') \rangle_1 = \frac{2 + 0.5 + 4 \times 0.62}{2 + 1 + 4} = 0.714,
 \]
 which agrees with the value computed in \ref{tab:structstabmat} up to
 sampling error.
@@ -364,14 +364,14 @@ As can be seen from \ref{eq:sccrobustness}, all that is required to fix robusten
 
 Next, we derive an upper bound on the robustness of any graph
 constructed from a given set of connected components.  Since
-$R(C_i) \le 1$ for all $i$, it follows that increasing $\ell_{ij}$ will
-increase $R(G)$.  Given two connected components $C_i$ and $C_j$ with
+$\langle R(\textrm{stab}(C_i), \mu') \rangle_1 \le 1$ for all $i$, it follows that increasing $\ell_{ij}$ will
+increase $\langle R(\textrm{stab}(G),\mu') \rangle_1$.  Given two connected components $C_i$ and $C_j$ with
 $v_i$ and $v_j$ nodes respectively, we have a maximum of $n_i n_j$
 links going from $C_i$ to $C_j$.  Hence, $\ell_{ij} \le v_i v_j$, so,
 we conclude that
 \begin{align}
-R(G) \le \frac{\sum\limits_{(i,j) \in \hier(G)} v_i v_j +
-               \sum\limits_{i=1}^n \connectivity_i R(C_i)}
+\langle R(\textrm{stab}(G),\mu') \rangle_1 \le \frac{\sum\limits_{(i,j) \in \hier(G)} v_i v_j +
+               \sum\limits_{i=1}^n \connectivity_i \langle R(C_i,\mu') \rangle_1}
               {\sum\limits_{(i,j) \in \hier(G)} v_i v_j +
                \sum\limits_{i=1}^n \connectivity_i},
 \end{align}
@@ -389,7 +389,7 @@ of the connected components:
 \begin{align} \label{eq:sccmaxrobustness}
 R_{\mathrm{max}}(C_1, \ldots C_n) =
 \frac{\frac{1}{2} ((\sum_{i=1}^n v_i)^2 - \sum_{i=1}^n v_i^2) +
-                    \sum_{i=1}^n \connectivity_i R(\hbox{avg stab}(C_i),1)}
+                    \sum_{i=1}^n \connectivity_i \langle R(\hbox{stab}(C_i),\mu') \rangle_1}
      {\frac{1}{2} ((\sum_{i=1}^n v_i)^2 - \sum_{i=1}^n v_i^2) +
                     \sum_{i=1}^n \connectivity_i}.
 \end{align}
@@ -399,7 +399,7 @@ whenever $i < j$.  Then, by the construction described in the previous
 section on network hierachy, we have a graph $G_{\mathrm{max}}$ such
 that the components of $G_{\mathrm{max}}$ are $C_1, \ldots C_n$ and
 $\hier (G_{\mathrm{max}}) = G_{\mathrm{tot}}$.  By our formula,
-$R(\hbox{avg stab} (G_{\mathrm{max}}), 1) = R_{\mathrm{max}}(C_1, \ldots C_n)$.
+$\langle R(\hbox{stab} (G_{\mathrm{max}}), \mu') \rangle_1 = R_{\mathrm{max}}(C_1, \ldots C_n)$.
 
 This argument also works when we resample more than one entry,
 although the notation becomes more complicated.  Suppose that we
@@ -415,23 +415,23 @@ m_0, m_1, \ldots. m_n}$ ways of choosing $m_i$ links from $C_i$ and
 $m_0$ links between strongly connected components.  Hence, our
 weighted average becomes
 \begin{equation}
-R(\hbox{avg stab} (G), m) =
+\langle R(\hbox{stab} (G), \mu') \rangle_m =
 \frac{\sum\limits_{(m_0, m_1, \ldots m_n) \in M}
       {m \choose m_0, m_1, \ldots. m_n}
-      \left(m_0 + \sum\limits_{i=1}^n m_i R(\hbox{avg stab} (C_i), m_i) \right)}
+      \left(m_0 + \sum\limits_{i=1}^n m_i \langle R(\hbox{stab} (C_i), \mu') \rangle_{m_i} \right)}
      {\sum\limits_{(m_0, m_1, \ldots m_n) \in M}
       {m \choose m_0, m_1, \ldots. m_n} m}
 \end{equation}
 
-As before, since $R(\hbox{avg stab} (C_i), m_i) \le 1$, we may
-increase $R(\hbox{avg stab} (G), m)$ by increasing the maximum
+As before, since $\langle R(\hbox{stab} (C_i), \mu') \rangle_{m_i} \le 1$, we may
+increase $\langle R(\hbox{stab} (G), \mu') \rangle_m$ by increasing the maximum
 possible value of $m_0$ while keeping the strongly connected
 components the same.  Again, if we fix $\hier(G)$, the maximum
 possible value of $m_0$ is $\sum_{(i,j) \in \hier(G)} v_i v_j$
 whereas, if we allow it to vary, the maximum is $\frac{1}{2} ((\sum_{i=1}^n
 v_i)^2 - \sum_{i=1}^n v_i^2)$, which is attained when $\hier(G_{max}) =
-G_{tot}$.  Hence, we conclude that $R(\hbox{avg stab} (G), m) \le
-R(\hbox{avg stab} (G_{\mathrm{max}}), m)$.
+G_{tot}$.  Hence, we conclude that $\langle R(\hbox{stab} (G), \mu') \rangle_m \le
+\langle R(\hbox{stab} (G_{\mathrm{max}}), \mu') \rangle_m$.
 
 The preceding argument demonstrates the manner in which robustness is
 maximized by maximizing the number of edges \emph{between} the strongly
