--- a/tex/abstract-cited.tex
+++ b/tex/abstract-cited.tex
@@ -1,2 +1,2 @@
 %!TEX root = ../paper-abstract.tex
-The analysis of dynamical systems that attempts to model chemical reaction, gene-regulatory, population, and ecosystem networks all rely on models having interacting components \cite{RossCr2003,Alon2006,Palsson2006,HamidBolouri2008,Palsson2011a,Voit2012,Sauro2012}. When the details of these interactions are unknown for systems of interest, one effective approach is to study the dynamical properties of an ensemble of models determined by constraints that can be considered to apply to all such systems \cite{Gardner1970,May1972,Cohen1984,May1972a,Radius2014}. Here we analyze the stability and robustness of a large class of dynamical systems \cite{WADDINGTON1942a,Wagner1997,Rutherford1998,VanNimwegen1999,Siegal2002,Bergman2003,Ciliberti2007b,Ciliberti2007,Draghi2010,Wagner2013}. In particular, we determine the probability distribution of robustness over system connectivity, which has significant implications from the study of metabolic to gene-regulatory to ecosystem network dynamics. We do so precisely for systems with two and three interacting components. We show that robustness is classified by the number of links between strongly connected components of the graph representing the underlying system connectivity leading to the conclusion that the most robust systems are also the most hierarchical. We also demonstrate that permutation of strongly connected components is a fundamental symmetry of system robustness. This results in the classification of the dynamical robustness of biological networks based upon a purely topological property.
+The analysis of dynamical systems that attempts to model chemical reaction, gene-regulatory, population, and ecosystem networks all rely on models having interacting components~\cite{RossCr2003,Alon2006,Palsson2006,HamidBolouri2008,Palsson2011a,Voit2012,Sauro2012}. When the details of these interactions are unknown for biological systems of interest, one effective approach is to study the dynamical properties of an ensemble of models determined by evolutionary constraints that may apply to all such systems~\cite{Gardner1970,May1972,Cohen1984,May1972a,Radius2014}. One such constraint is that of dynamical robustness, the probability of a stable system to remain stable under perturbation~\cite{WADDINGTON1942a,Wagner1997,Rutherford1998,VanNimwegen1999,Siegal2002,Bergman2003,Ciliberti2007b,Ciliberti2007,Draghi2010,Wagner2013}. Despite previous investigation, the relationship between dynamical robustness, an important functional characteristic of many biological systems, and network structure is poorly understood. Here we analyze the stability and robustness of a large class of dynamical systems and demonstrate that the most hierarchical network structures are the most robust. In particular, we determine the probability distribution of robustness over system connectivity and show that robustness is maximized by maximizing the number of links between strongly connected components of the graph representing the underlying system connectivity. We also demonstrate that permutation of strongly connected components is a fundamental symmetry of system robustness, which applies to networks of any number of components.  The classification of dynamical robustness based upon a purely topological property provides a fundamental organizing principle that can be used in the context of experimental validation to select among models that break or preserve network hierarchy. This result contributes to an explanation of the observation of hierarchical modularity across levels of the biological hierarchy~\cite{Zhao2006,Ravasz2002,Bhardwaj2010,Colm,Corominas-Murtra2013}.
