--- a/tex/figures.tex
+++ b/tex/figures.tex
@@ -1,4 +1,24 @@
 %!TEX root = ../paper.tex
+
+\begin{figure}[!ht]
+\centering
+\noindent\includegraphics[width=0.9\columnwidth]{fig/biomodelexamples.pdf}
+\caption{{\bf Dynamical models in systems biology.} (A) (B) (C)}
+\label{fig:biomodelexamples}
+\end{figure}
+
+\pagebreak
+
+\begin{figure}[!ht]
+\centering
+\noindent\includegraphics[width=0.9\columnwidth]{fig/modsccsym.pdf}
+\caption{{\bf Open systems, strongly connected components and symmetries of robustness.} (A) (B) (C)}
+\label{fig:modsccsym}
+\end{figure}
+
+\pagebreak
+
+
 \begin{figure}[!ht]
 \centering
 \noindent\includegraphics[width=0.4\columnwidth]{fig/examplesystemmodules.pdf}
