move methods to supplement; factor out intro, results and discussion; combine figures

--- a/header.tex
+++ b/header.tex
@@ -133,4 +133,7 @@ urlcolor=[rgb]{.09 .29 .54}}
 \def\wprod{\mathbf{wp}}
 \def\length{\mathbf{len}}
 \def\connectivity{\mathrm{d}}
+\def\reffigexamplesystemmodules{\ref{fig:modsccsym}A }
+\def\reffighiertransformations{\ref{fig:modsccsym}B }
+\def\reffigscc{\ref{fig:modsccsym}C }
 %% END MACROS SECTION
