--- a/tex/figuressupp.tex
+++ b/tex/figuressupp.tex
@@ -1,4 +1,12 @@
 %!TEX root = ../paper.tex
+
+\begin{figure}[!ht]
+\centering
+\noindent\includegraphics[width=0.9\columnwidth]{fig/robustnesssymmetries.pdf}
+\caption{{\bf Example symmetries of robustness.} In this example, the connected component sizes are fixed at $\{2,1,1\}$ with a total of $3$ links between them. Red arrows correspond to transformations like \reffighiertransformations a where SCCs are swapped whereas purple arrows correspond to transformations like \reffighiertransformations b where links are moved between nodes within a SCC. (A) shows all underlying graphs while (B) shows the number of nodes in each SCC and the number of links between the SCCs.}
+\label{fig:robustnesssymmetries}
+\end{figure}
+
 % \begin{figure}[!ht]
 % \centering
 % \noindent\includegraphics[width=0.7\columnwidth]{fig/region2and3.pdf}
