--- a/paper.tex
+++ b/paper.tex
@@ -47,7 +47,8 @@ $^4$Santa Fe Institute, 1399 Hyde Park Road, Santa Fe, NM 87501, USA
 \section{Discussion}
 \input{tex/discussion}
 
-\section{Acknowlegements}  The authors would like to thank Jay Sulzberger and Ximo Pechuan for useful suggestions and discussions.
+\section{Acknowlegements}
+\input{tex/acknowledgements}
 
 \pagebreak
 
