--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -3,7 +3,7 @@ The traditional approach taken in the study of chemical reaction, gene-regulator
 
 Recent work has demonstrated that as a result of \emph{sloppiness} in the dependence of qualitative dynamic phenomena on the geometry of parameter space that this approach allows for a large variety of models to fit the data \cite{Brown2003,Gutenkunst2007,Daniels2008a,Machta2013,Hines2014,Prabakaran2014,Tonsing2014}. In the face of uncertainty about the structure of such biological networks, to model the components under consideration as randomly interlinked becomes a reasonable approximation. This approach enables one to gain insight into what dynamical phenomena are possible to observe within a given class of dynamical systems, which is necessary to understand in order to determine whether or not a particular dynamical phenomenon should be regarded as unique or generic in the development and investigation of models applied to particular systems \cite{Gunawardena2013,Gunawardena2014}.
 
-Indeed, investigating generic properties of a large class of dynamical systems was the approach taken by May in models of ecosystem dynamics \cite{Gardner1970,May1972}. The class of dynamical systems studied by May is not restricted to ecosystem dynamics and encompasses, among others, the dynamics of all of the biological networks represented in \ref{fig:biomodelexamples}. In particular, May conjectured on the basis of results from random matrix theory what eventually came to be referred to as the May-Wigner stability theorem \cite{Cohen1984,May1972a,Radius2014}. This relationship implies a relationship between a topological property, system connectivity, and a dynamical property, stability.
+Indeed, investigating generic properties of a large class of dynamical systems was the approach taken by May in models of ecosystem dynamics \cite{Gardner1970,May1972}. The class of dynamical systems studied by May is not restricted to ecosystem dynamics and encompasses, among others, the dynamics of all of the biological networks represented in \ref{fig:biomodelexamples}. In particular, May conjectured on the basis of results from random matrix theory what eventually came to be referred to as the May-Wigner stability theorem \cite{Cohen1984,May1972a,Radius2014}. This implies a relationship between a topological property, system connectivity, and a dynamical property, stability.
 
 
 % The generic applicability of gaining a better understanding of the class of models investigated by May demonstrates the unequivocal value of deeper investigation.  However, work attempting to continue the development of the so-called May-Wigner stability theorem revealed that May's conjectured stability criterion was not as easy to demonstrate as was initially believed.
