--- a/paper.tex
+++ b/paper.tex
@@ -31,7 +31,7 @@ $^4$Santa Fe Institute, 1399 Hyde Park Road, Santa Fe, NM 87501, USA
 \end{center}
 
 {\begin{quote} \bf
-% \input{tex/abstract-cited}
+\input{tex/abstract-cited}
 \end{quote}}
 
 % \section{Todo}
