--- a/header.tex
+++ b/header.tex
@@ -12,6 +12,7 @@
 \documentclass[10pt]{article}
 %\documentclass[aps,twocolumn]{revtex4-1}
 %\documentclass[aps,twocolumn]{article}
+% \usepackage{multicol}
 
 % amsmath package, useful for mathematical formulas
 \usepackage{amsmath}
@@ -136,4 +137,8 @@ urlcolor=[rgb]{.09 .29 .54}}
 \def\reffigexamplesystemmodules{\ref{fig:modsccsym}A }
 \def\reffighiertransformations{\ref{fig:modsccsym}B }
 \def\reffigscc{\ref{fig:modsccsym}C }
+\def\reffigrobustconnect{\ref{fig:combined}A }
+\def\reffigrobusthierarchy{\ref{fig:combined}B }
+\def\reffigconnectcycle3D3x3{\ref{fig:combined}C }
+\def\reffigconnectdist3D3x3{\ref{fig:combined}D }
 %% END MACROS SECTION
