--- a/tex/figuressupp.tex
+++ b/tex/figuressupp.tex
@@ -7,6 +7,24 @@
 \label{fig:robustnesssymmetries}
 \end{figure}
 
+\pagebreak
+
+\begin{figure}[!ht]
+\centering
+\noindent\includegraphics[width=0.8\columnwidth]{fig/apstab3x3.pdf}
+\caption{{\bf System stability as a function of connectivity.} The red points represent the average of system stability at each connectivity.}
+\label{fig:apstab3x3}
+\end{figure}
+
+\pagebreak
+
+\begin{figure}[!ht]
+\centering
+\noindent\includegraphics[width=0.8\columnwidth]{fig/cycle3x3.pdf}
+\caption{{\bf System robustness as a function of number of cycles.} }
+\label{fig:cycle3x3}
+\end{figure}
+
 % \begin{figure}[!ht]
 % \centering
 % \noindent\includegraphics[width=0.7\columnwidth]{fig/region2and3.pdf}
