--- a/paper.tex
+++ b/paper.tex
@@ -6,9 +6,11 @@
 % http://tex.stackexchange.com/a/6063/6784
 \let\ref\autoref
 
-\title{Ensemble Stability of Biological Networks}
-
 \pagenumbering{arabic}
+
+% \twocolumn[
+% \begin{@twocolumnfalse}
+\title{Ensemble Stability of Biological Networks}
 
 % Title must be 150 characters or less
 \begin{center}
@@ -29,10 +31,18 @@ $^4$Santa Fe Institute, 1399 Hyde Park Road, Santa Fe, NM 87501, USA
 \\[.5cm]
 % $\ast$To whom correspondence should be addressed; E-mail: aviv@einstein.yu.edu.
 \end{center}
+% \end{@twocolumnfalse}
+% ]
 
-{\begin{quote} \bf
+% \begin{multicols}{2}
+
+% {\begin{quote} \bf
+% \input{tex/abstract-cited}
+% \end{quote}}
+{\bf
 \input{tex/abstract-cited}
-\end{quote}}
+}
+
 
 % \section{Todo}
 % \listoftodos
@@ -50,14 +60,17 @@ $^4$Santa Fe Institute, 1399 Hyde Park Road, Santa Fe, NM 87501, USA
 \section{Acknowlegements}
 \input{tex/acknowledgements}
 
-\pagebreak
+% \pagebreak
 
+{\footnotesize
 \bibliographystyle{pnas}
 \bibliography{bib/books,bib/papers}
+}
+
+% \end{multicols}
 
 \pagebreak
 \FloatBarrier
-
 \section{Figure Legends}
 \input{tex/figures}
 
