--- a/tex/figures.tex
+++ b/tex/figures.tex
@@ -49,26 +49,26 @@
 \begin{figure}[!ht]
 \centering
 \noindent\includegraphics[width=1.0\columnwidth]{fig/combinedfigs.pdf}
-\caption{{\bf Characterization of stability and robustness according to properties of system structure} (A) Stability versus connectivity, (B) robustness versus connectivity, (C) robustness versus number of cycles, (D) robustness versus hierarchy for three component systems.
-}1,500 words long
+\caption{{\bf Characterization of stability and robustness according to properties of system structure} (A) Robustness versus connectivity, (B) robustness versus hierarchy, (C) Robustness versus number of cycles and connectivity for three component systems. Each point represents the average robustness of all graphs having a given number of cycles and connectivity. (D) Robustness versus hierarchy and connectivity for three component systems. Each point represents the average robustness of all graphs having a given hierarchy and connectivity.
+}
 \label{fig:combined}
 \end{figure}
 
-\pagebreak
+% \pagebreak
 
-\begin{figure}[!ht]
-\centering
-\noindent\includegraphics[width=0.8\columnwidth]{fig/connectcycle3D3x3.pdf}
-\caption{{\bf Robustness versus number of cycles and connectivity for three component systems.} Each point represents the average robustness of all graphs having a given number of cycles and connectivity.}
-\label{fig:connectcycle3D3x3}
-\end{figure}
+% \begin{figure}[!ht]
+% \centering
+% \noindent\includegraphics[width=0.8\columnwidth]{fig/connectcycle3D3x3.pdf}
+% \caption{{\bf Robustness versus number of cycles and connectivity for three component systems.} Each point represents the average robustness of all graphs having a given number of cycles and connectivity.}
+% \label{fig:connectcycle3D3x3}
+% \end{figure}
 
-\pagebreak
+% \pagebreak
 
-\begin{figure}[!ht]
-\centering
-\noindent\includegraphics[width=0.8\columnwidth]{fig/connectdist3D3x3.pdf}
-\caption{{\bf Robustness versus hierarchy and connectivity for three component systems.} Each point represents the average robustness of all graphs having a given hierarchy and connectivity.}
-\label{fig:connectdist3D3x3}
-\end{figure}
+% \begin{figure}[!ht]
+% \centering
+% \noindent\includegraphics[width=0.8\columnwidth]{fig/connectdist3D3x3.pdf}
+% \caption{{\bf Robustness versus hierarchy and connectivity for three component systems.} Each point represents the average robustness of all graphs having a given hierarchy and connectivity.}
+% \label{fig:connectdist3D3x3}
+% \end{figure}
 
