--- a/tex/results.tex
+++ b/tex/results.tex
@@ -1,2 +1,8 @@
 %!TEX root = ../paper.tex
-Here we determine the relationship between network hierarchy, a topological property, and the probability of \emph{robustness} or \emph{structural stability}, a dynamical property \cite{Smale1967}. Robustness is of interest at all scales of the biological hierarchy, and has been previously studied in the context of gene-regulatory networks \cite{WADDINGTON1942a,VanNimwegen1999,Siegal2002,Ciliberti2007b,Ciliberti2007,Wagner2013}. Intuitively, robustness is the probability of stability to perturbation in the system structure for systems which have already been determined to be stable in the sense of linear stability analysis. We precisely compute the probability of stability as a distribution over system connectivity for all systems containing two or three interacting components. We find that stability to structural perturbations of this class of dynamical systems is correlated with connectivity, number of cycles, and the number of links between strongly connected components of the underlying interdependency graph. The latter derives from the fact that the permutation of strongly connected components is a symmetry of system robustness.
+Here we determine the relationship between network hierarchy, a topological property, and the probability of \emph{robustness} or \emph{structural stability}, a dynamical property \cite{Smale1967}. Robustness is of interest at all scales of the biological hierarchy, and has been previously studied in the context of gene-regulatory networks \cite{WADDINGTON1942a,VanNimwegen1999,Siegal2002,Ciliberti2007b,Ciliberti2007,Wagner2013}. Intuitively, robustness is the probability of stability to perturbation in the system structure for systems which have already been determined to be stable in the sense of linear stability analysis. We precisely compute the probability of stability as a distribution over system connectivity for all systems containing two or three interacting components. We find that stability to structural perturbations of this class of dynamical systems is correlated with connectivity, number of cycles, and the number of links between strongly connected components (SCCs) of the underlying interdependency graph. The latter derives from the fact that the permutation of SCCs is a symmetry of system robustness.
+
+The dynamical model given in terms of a system of differential equations for any network can be represented in terms of an interaction graph (\ref{fig:biomodelexamples} top row). These interaction graphs can be viewed as deriving from the combination of system modules that accept a given pattern of inputs and produce a given pattern of outputs (\reffigexamplesystemmodules). The network architecture can be represented in terms of an adjacency matrix and further abstracted by mapping the interaction graph to the network of SCCs \reffighiertransformations. This map from the interaction graph of a biological network, referred to as $\hier$, has a collection of symmetries. These three symmetries represent transformations that can be performed on the interaction graph that do not change the network of SCCs to which it is associated \reffigscc. We have derived an analytical expression for system robustness that demonstrates that two of these three symmetries apply to dynamical robustness (Supplementary Information). \ref{fig:robustnesssymmetries} shows an example of these symmetries applied to a specific interaction graph.
+
+Recognizing the symmetries of dynamical robustnes, leads to the prediction that networks maximizing the number of links between SCCs, will also maximize dynamical robustness. This implies that the interaction graphs for systems that are the most robust will also maximize the overall number of SCCs. For example, this prediction suggests that any biological network whose associated dynamical system has the interaction graph \reffighiertransformations top will be more robust than those associated to any of the other interaction graphs in \reffighiertransformations.
+
+To test this prediction, we computed the probability distribution of stability and dynamical robustness relative to biological network architecture for ensembles of systems having two or three interacting components (see \ref{tab:structstabmat} and \ref{tab:structstabmat3}). For systems having three components, we found that robustness is correlated with connectivity, but that the most robust systems have intermediate connectivity for a given network size (\reffigrobustconnect). Accounting for the number of cycles in a network architecture reveals a strong correlation between robustness and connectivity that was hidden when networks with any number of cycles were considered together (\reffigconnectcycle3D3x3). While the most hierarchical network architecture will always lack cycles altogether, cycle number is clearly insufficient to account for robustness as the members of each class span nearly the entire range of possible robustness values. Consistent with our analysis of the symmetries of robustness, we found that the most hierarchical network architecture is the most robust (\reffigrobusthierarchy). Moreover, if we consider hierarchy partitioned by connectivity, we find that there is a monotonic increase in robustness following any line of increasing hierarchy (\reffigconnectdist3D3x3).
