--- a/tex/figures.tex
+++ b/tex/figures.tex
@@ -3,7 +3,7 @@
 \begin{figure}[!ht]
 \centering
 \noindent\includegraphics[width=0.9\columnwidth]{fig/biomodelexamples.pdf}
-\caption{{\bf Dynamical models in systems biology.} (A) (B) (C)}
+\caption{{\bf Dynamical models in systems biology.} The top row represents a chemical reaction network (CRN) a gene regulatory network (GRN) and an ecological regulatory network (ERN) in terms of the graphical methods specific to each field. The second row represents the interaction graph, which provides a unified representation for networks across these fields. The third row represents a particular example of a system of differential equations that are used to model a biological network within each of the domains of application considered here. The fourth row shows the general form of a system of differential equations that can be used to model any network architecture within the three domains of application exemplified here.}
 \label{fig:biomodelexamples}
 \end{figure}
 
